<resources>
    <string name="app_name">ChatApp</string>
    <string name="default_web_client_id">26575654240-31q81dfdrf92faub9qbs5isd0eg9fat5.apps.googleusercontent.com</string>

    <string name="item_perfil">Perfil</string>
    <string name="item_usuarios">Usuarios</string>
    <string name="item_chats">Chats</string>

    <string name="titulo">Titulo</string>

    <string name="opcionEmail">Continuar con Email</string>
    <string name="opcionGoogle">Continuar con Google</string>

    <string name="login">Login</string>
    <string name="email">Correo Electrónico</string>
    <string name="contrasena">Contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="no_tienes_cuenta">¿No tienes una cuenta?</string>
    <string name="registrarme">Registrarme</string>
    <string name="recuperar_cuenta">¿Olvidé la contraseña? <b> Recuperar</b></string>

    <string name="registro">Registro</string>
    <string name="nombres">Nombres</string>
    <string name="rep_contrasena">Repita la contraseña</string>
    <string name="registrar">Registrar</string>

    <string name="actualizar_info">Actualizar</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="cambiar_contrasena">Cambiar Contraseña</string>

    <string name="txt_nombres">Nombres: </string>
    <string name="tv_nombres"> -- </string>
    <string name="txt_email">Email: </string>
    <string name="tv_email"> -- </string>
    <string name="txt_proveedor">Proveedor: </string>
    <string name="tv_proveedor"> -- </string>
    <string name="txt_tiempo_registro">Miembro desde: </string>
    <string name="tv_tiempo_registro"> -- </string>

    <string name="txt_titulo_editar">Editar Información</string>
    <string name="actualizar">Actualizar</string>

    <string name="txt_olvide_contrasena">Olvidé mi Contraseña</string>
    <string name="txt_ingrese_email">Ingrese su email para el envío de las instrucciones de recuperación</string>
    <string name="enviar">Enviar</string>

    <string name="txt_cambiar_contrasena">Cambiar Contraseña</string>

    <string name="et_contrasena_actual">Contraseña Actual</string>
    <string name="et_contrasena_nueva">Contraseña Nueva</string>
    <string name="et_repetir_contrasena">Repita Contraseña Nueva</string>
    <string name="cambiar">Cambiar</string>

    <string name="item_uid">uid del usuario</string>
    <string name="item_nombre">nombre del usuario</string>
    <string name="item_email">email del usuario</string>

    <string name="et_buscar_usuario">Buscar Usuario</string>

    <string name="txt_nombre_usuario">Nombres</string>
    <string name="txt_estado_chat">Online</string>
    <string name="txt_mensaje_chat">Escriba algo</string>
    <string name="txt_mensaje_tiempo">dd/MM/yyyy hh:mnn</string>

    <string name="et_buscar">Buscar</string>
    <string name="txt_fecha">dd/MM/yyyy</string>

    <string name="cerrar">Cerrar</string>

</resources>