<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OlvideContrasenaActivity">

    <RelativeLayout
        android:id="@+id/toolbarRL"
        android:layout_width="match_parent"
        android:layout_height="55dp">

        <ImageButton
            android:id="@+id/ib_regresar"
            android:padding="10dp"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_regresar"
            android:background="@android:color/transparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        
        <TextView
            android:id="@+id/txt_olvide_contrasena"
            android:text="@string/txt_olvide_contrasena"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        
        <View
            android:background="#cccccc"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="1dp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_below="@+id/toolbarRL"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_icono_pass"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/icono_password"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/txt_ingrese_email"
            android:text="@string/txt_ingrese_email"
            android:textAlignment="center"
            android:layout_below="@+id/iv_icono_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_email"
            android:layout_marginTop="10dp"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            android:layout_below="@id/txt_ingrese_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_email"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_enviar"
            android:text="@string/enviar"
            app:cornerRadius="8dp"
            android:layout_alignParentBottom="true"
            android:textAllCaps="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </RelativeLayout>

</RelativeLayout>