<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".chat.ChatActivity">

    <RelativeLayout
        android:id="@+id/toolbarRL"
        android:layout_width="match_parent"
        android:layout_height="55dp">

        <ImageButton
            android:id="@+id/ibRegresar"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_regresar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ivToolbar"
            android:layout_marginEnd="7dp"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@id/tv_nombre_usuario"
            android:src="@drawable/perfil_usuario"
            android:layout_width="40dp"
            android:layout_height="40dp"/>

        <TextView
            android:id="@+id/tv_nombre_usuario"
            android:text="@string/txt_nombre_usuario"
            android:layout_centerInParent="true"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_estado_chat"
            android:text="@string/txt_estado_chat"
            android:textSize="12sp"
            android:layout_centerInParent="true"
            android:layout_below="@+id/tv_nombre_usuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <View
            android:background="#ccc"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>
    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_chats"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:layout_below="@id/toolbarRL"
        android:layout_above="@id/view2"
        android:padding="5dp"
        tools:listitem="@layout/item_chat_left"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <RelativeLayout
        android:id="@+id/rl_mensaje"
        android:layout_alignParentBottom="true"
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_mensaje_chat"
            android:hint="@string/txt_mensaje_chat"
            android:padding="10dp"
            android:layout_toStartOf="@+id/fab_adjuntar"
            android:inputType="textMultiLine|textCapSentences"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_adjuntar"
            android:layout_centerVertical="true"
            app:fabSize="mini"
            android:elevation="0dp"
            android:layout_toStartOf="@+id/fab_enviar"
            android:layout_marginEnd="7dp"
            android:src="@drawable/ic_imagen_chat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_enviar"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            app:fabSize="mini"
            android:elevation="0dp"
            android:src="@drawable/ic_enviar_chat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </RelativeLayout>

    <View
        android:id="@+id/view2"
        android:background="#ccc"
        android:layout_above="@+id/rl_mensaje"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

</RelativeLayout>